syntax = "proto3";
option go_package = "./userpb";

service Userservice {
    rpc CreateUser (Request) returns (Responce);
    rpc GetUser (Responce) returns (User);
    rpc UpdateUser (Responce)  returns (UserRequest);
    rpc DeleteUser (Responce)  returns (UserRequest);
}

message UserRequest{
    string message = 1;
}

message User {
    int32   id       = 1;
    string  name     = 2;
    string  email    = 3;
    int32   age      = 4;
}

message Request {
    string  name     = 1;
    string  email    = 2;
    int32   age      = 3;
}

message Responce {
    int32   id       = 1;
}